k8s-manifests/apps/hedgedoc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc
  labels:
    app: hedgedoc
spec:
  selector:
    app: hedgedoc
  ports:
    - port: 80
      targetPort: 3000
