k8s-manifests/apps/hedgedoc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hedgedoc
  labels:
    app: hedgedoc
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - pad.s2n.donkeysharp.xyz
      secretName: homelab-s2n-wildcard-tls
  rules:
    - host: pad.s2n.donkeysharp.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hedgedoc
                port:
                  number: 80
